# loona-boycott-deprecated

./: README.md  shell.nix
backend/: .env-example  all_songs.txt  app.py  config.py  main.py  pyproject.toml  test.py
backend/auth/: __init__.py  index.py
backend/utils/: loona_songs.json
backend/utils/artist_songs/: __init__.py  index.py
backend/utils/playlist/: index.py
backend/utils/playlist_items/: __init__.py  index.py
backend/utils/playlists/: __init__.py  index.py
backend/utils/replace/: __init__.py  index.py
backend/utils/show_items/: __init__.py  index.py
frontend/: package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: LoginButton.tsx  PlaylistForm.tsx
